<resources>
    <string name="app_name">MobileLogin</string>
    <string name="judul">Mobile LOGIN</string>
    <string name="temail">Email</string>
    <string name="tpassword">Password</string>
    <string name="btnlogin">Sign In</string>
    <string name="cbrememberme">Remember Me</string>
    <string name="tdaftar">Daftar?</string>
    <string name="btnbutton1">Button1</string>
    <string name="tRegistrasi">Registrasi</string>
    <string name="tNama">Nama</string>
    <string name="tTTL">Tempat, Tanggal Lahir</string>
    <string name="tAlamat">Alamat</string>
    <string name="txbtnRegis">Registrasi</string>
    <string name="tvhasil">Selamat Datang</string>
    <string name="tvemail">Hasil Email</string>
    <string name="tvpassword">Hasil Password</string>
    <string name="tAbout">About</string>
    <string name="tlihatdata">lihat data</string>
    <string name="teditdata">Edit data</string>
    <string name="tdatakontak">Data kontak</string>
    <string name="tdetailkontak">Detail kontak</string>
    <string name="tnamaitem">Nama Item</string>
    <string name="tnama">Nama</string>
    <string name="tnohp">No Telepon</string>


</resources>